--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href=""">Início</a>
          <a href=""">Sobre nós</a>
     <ol>
-        <li>MEMBROS</li>
+        <h1>MEMBROS</h1>
         <li>Enzo</li>
         <li>Dany</li>
         <li>Paulo</li>
