--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>Letícia</li>
         <li>Geovanny</li>
         <li>João</li>
+        <li>Daniel Carvalho</li>
     </ol>
 <img src="" alt="">
 
