--- a/Projeto Enzo 1°Ds HTML/ex3.html
+++ b/Projeto Enzo 1°Ds HTML/ex3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>banana caturra</title>
+    <title>Exercícios</title>
     <meta name="description" content="descrição">
     <meta name="kaywords" content="Paises, estados, cidades">
 </head>
