--- a/Projeto Enzo 1°Ds HTML/ex4.html
+++ b/Projeto Enzo 1°Ds HTML/ex4.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>banana caturra</title>
+    <title>Pçeas Custo Benefícios</title>
     <meta name="description" content="descrição">
     <meta name="kaywords" content="Paises, estados, cidades">
 </head>
 <body>
-    <h1>Titulo principal</h1>
-    <h2>subtitulo 1</h2>
-    <p>meu paragrafo</p>
+    <h1>Peças Custo Benefício</h1>
+    <h2>Aqui você vai encontrar peças de hardware com preços baixos</h2>
+    <p>Este site tem o obtivo de informar o comprador a adquirir peças de hardware com o foco do Custo Benefício</p>
 </body>
 </html>
